; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_nl_cmd_trap_set_doit.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_nl_cmd_trap_set_doit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.genl_info = type { %struct.devlink**, %struct.netlink_ext_ack* }
%struct.devlink = type { i32 }
%struct.netlink_ext_ack = type { i32 }
%struct.devlink_trap_item = type { i32 }

@EOPNOTSUPP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Device did not register this trap\00", align 1
@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.genl_info*)* @devlink_nl_cmd_trap_set_doit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @devlink_nl_cmd_trap_set_doit(%struct.sk_buff* %0, %struct.genl_info* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.genl_info*, align 8
  %6 = alloca %struct.netlink_ext_ack*, align 8
  %7 = alloca %struct.devlink*, align 8
  %8 = alloca %struct.devlink_trap_item*, align 8
  %9 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.genl_info* %1, %struct.genl_info** %5, align 8
  %10 = load %struct.genl_info*, %struct.genl_info** %5, align 8
  %11 = getelementptr inbounds %struct.genl_info, %struct.genl_info* %10, i32 0, i32 1
  %12 = load %struct.netlink_ext_ack*, %struct.netlink_ext_ack** %11, align 8
  store %struct.netlink_ext_ack* %12, %struct.netlink_ext_ack** %6, align 8
  %13 = load %struct.genl_info*, %struct.genl_info** %5, align 8
  %14 = getelementptr inbounds %struct.genl_info, %struct.genl_info* %13, i32 0, i32 0
  %15 = load %struct.devlink**, %struct.devlink*** %14, align 8
  %16 = getelementptr inbounds %struct.devlink*, %struct.devlink** %15, i64 0
  %17 = load %struct.devlink*, %struct.devlink** %16, align 8
  store %struct.devlink* %17, %struct.devlink** %7, align 8
  %18 = load %struct.devlink*, %struct.devlink** %7, align 8
  %19 = getelementptr inbounds %struct.devlink, %struct.devlink* %18, i32 0, i32 0
  %20 = call i64 @list_empty(i32* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %2
  %23 = load i32, i32* @EOPNOTSUPP, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %3, align 4
  br label %46

25:                                               ; preds = %2
  %26 = load %struct.devlink*, %struct.devlink** %7, align 8
  %27 = load %struct.genl_info*, %struct.genl_info** %5, align 8
  %28 = call %struct.devlink_trap_item* @devlink_trap_item_get_from_info(%struct.devlink* %26, %struct.genl_info* %27)
  store %struct.devlink_trap_item* %28, %struct.devlink_trap_item** %8, align 8
  %29 = load %struct.devlink_trap_item*, %struct.devlink_trap_item** %8, align 8
  %30 = icmp ne %struct.devlink_trap_item* %29, null
  br i1 %30, label %36, label %31

31:                                               ; preds = %25
  %32 = load %struct.netlink_ext_ack*, %struct.netlink_ext_ack** %6, align 8
  %33 = call i32 @NL_SET_ERR_MSG_MOD(%struct.netlink_ext_ack* %32, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %34 = load i32, i32* @ENOENT, align 4
  %35 = sub nsw i32 0, %34
  store i32 %35, i32* %3, align 4
  br label %46

36:                                               ; preds = %25
  %37 = load %struct.devlink*, %struct.devlink** %7, align 8
  %38 = load %struct.devlink_trap_item*, %struct.devlink_trap_item** %8, align 8
  %39 = load %struct.genl_info*, %struct.genl_info** %5, align 8
  %40 = call i32 @devlink_trap_action_set(%struct.devlink* %37, %struct.devlink_trap_item* %38, %struct.genl_info* %39)
  store i32 %40, i32* %9, align 4
  %41 = load i32, i32* %9, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %36
  %44 = load i32, i32* %9, align 4
  store i32 %44, i32* %3, align 4
  br label %46

45:                                               ; preds = %36
  store i32 0, i32* %3, align 4
  br label %46

46:                                               ; preds = %45, %43, %31, %22
  %47 = load i32, i32* %3, align 4
  ret i32 %47
}

declare dso_local i64 @list_empty(i32*) #1

declare dso_local %struct.devlink_trap_item* @devlink_trap_item_get_from_info(%struct.devlink*, %struct.genl_info*) #1

declare dso_local i32 @NL_SET_ERR_MSG_MOD(%struct.netlink_ext_ack*, i8*) #1

declare dso_local i32 @devlink_trap_action_set(%struct.devlink*, %struct.devlink_trap_item*, %struct.genl_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
